[gd_scene load_steps=42 format=3 uid="uid://bgeien6cw7ehi"]

[ext_resource type="Script" uid="uid://b6c7kfd4g5jnj" path="res://scripts/DreamWorldPlayer/player_dreamworld.gd" id="1_fd23n"]
[ext_resource type="Texture2D" uid="uid://38w5c6o1fu2x" path="res://assets/plattformer_character/animations/pushing/east/frame_003.png" id="2_3pffi"]
[ext_resource type="Script" uid="uid://cptwt0tu7lhxh" path="res://scenes/components/health.gd" id="3_rxbup"]
[ext_resource type="PackedScene" uid="uid://2puypr5ol8x8" path="res://scenes/DreamworldPlayer/range_attack_charges.tscn" id="4_bydnf"]
[ext_resource type="PackedScene" uid="uid://djjul724nbfvo" path="res://scenes/DreamworldPlayer/health_wave.tscn" id="5_060o7"]
[ext_resource type="Shader" uid="uid://l5jshm6m8b1x" path="res://scenes/components/hit_flash.gdshader" id="6_tg0uq"]
[ext_resource type="SpriteFrames" path="res://scenes/DreamworldPlayer/player_dreamworld.tres" id="7_nt51a"]
[ext_resource type="Script" uid="uid://rb433xiwvdb6" path="res://scenes/components/hitbox.gd" id="74_3kc26"]
[ext_resource type="Texture2D" uid="uid://d1atpo45f7fum" path="res://assets/plattformer_character/animations/melee_slash/NPT100.png" id="75_w18fs"]
[ext_resource type="Texture2D" uid="uid://cqantmmujyskg" path="res://assets/plattformer_character/animations/melee_slash/NPT101.png" id="76_ekknv"]
[ext_resource type="Texture2D" uid="uid://bjlhawrp55nnj" path="res://assets/plattformer_character/animations/melee_slash/NPT102.png" id="77_6i2nj"]
[ext_resource type="Texture2D" uid="uid://daagbhqb24058" path="res://assets/plattformer_character/animations/melee_slash/NPT103.png" id="78_rhhck"]
[ext_resource type="Script" uid="uid://doiua0q38uaxe" path="res://scenes/components/hurtbox.gd" id="79_84bjp"]
[ext_resource type="PackedScene" uid="uid://r1grvh0tojdc" path="res://scenes/HUD/dreamworld/hund_coin.tscn" id="80_ku5kx"]
[ext_resource type="Script" uid="uid://b8ib7chc7er6p" path="res://scripts/DreamWorldPlayer/audio_player.gd" id="92_uyd2q"]
[ext_resource type="AudioStream" uid="uid://c6ipsxxk354ln" path="res://assets/sfx/DreamwolrdPlayerSounds/punchAttack/83976__theredshore__punch.mp3" id="93_on6mk"]
[ext_resource type="AudioStream" uid="uid://4k6m8dvfogpo" path="res://assets/sfx/DreamwolrdPlayerSounds/getHit/216783__castironcarousel__punch-8.mp3" id="94_51uo2"]
[ext_resource type="AudioStream" uid="uid://dg7e8p2u4gptj" path="res://assets/sfx/DreamwolrdPlayerSounds/death/udead.mp3" id="95_01t1s"]
[ext_resource type="AudioStream" uid="uid://cl5ceahnux4hm" path="res://assets/sfx/DreamwolrdPlayerSounds/rangeAttack/421703__bolkmar__sfx-lo-fi-shoot.wav" id="96_bdibv"]
[ext_resource type="AudioStream" uid="uid://p0xajkej1osa" path="res://assets/sfx/DreamwolrdPlayerSounds/jump/802608__jelloapocalypse__snes-jump-tinyfarts.mp3" id="97_igi5t"]
[ext_resource type="AudioStream" uid="uid://bi0dttdaiat6" path="res://assets/sfx/kenney_impact-sounds/Audio/footstep_concrete_000.ogg" id="98_7f16g"]
[ext_resource type="AudioStream" uid="uid://wfu714c3ehum" path="res://assets/sfx/DreamwolrdPlayerSounds/dash/611474__jwsounddesign__woosh-mediumblast.mp3" id="98_igi5t"]
[ext_resource type="AudioStream" uid="uid://h0mtxbkjdmdd" path="res://assets/sfx/kenney_impact-sounds/Audio/footstep_concrete_001.ogg" id="99_fxyod"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_t3ro2"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id="Curve_t3ro2"]
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(0.99248123, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_50cf0"]
curve = SubResource("Curve_t3ro2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bqe6c"]
gravity = Vector3(0, 0, 0)
alpha_curve = SubResource("CurveTexture_50cf0")
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ku5kx"]
resource_local_to_scene = true
shader = ExtResource("6_tg0uq")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 1.0

[sub_resource type="Animation" id="Animation_ku5kx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.6666666),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_gjpxn"]
resource_name = "hit_flash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ku5kx"]
_data = {
&"RESET": SubResource("Animation_ku5kx"),
&"hit_flash": SubResource("Animation_gjpxn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdh20"]
size = Vector2(14, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v17r1"]
size = Vector2(25.937502, 48.749996)

[sub_resource type="SpriteFrames" id="SpriteFrames_wd1bp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("75_w18fs")
}, {
"duration": 1.0,
"texture": ExtResource("76_ekknv")
}, {
"duration": 1.0,
"texture": ExtResource("77_6i2nj")
}, {
"duration": 1.0,
"texture": ExtResource("78_rhhck")
}],
"loop": false,
"name": &"slash",
"speed": 16.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_q6oaw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("75_w18fs")
}, {
"duration": 1.0,
"texture": ExtResource("76_ekknv")
}, {
"duration": 1.0,
"texture": ExtResource("77_6i2nj")
}, {
"duration": 1.0,
"texture": ExtResource("78_rhhck")
}],
"loop": false,
"name": &"slash",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aofeu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k4woj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("75_w18fs")
}, {
"duration": 1.0,
"texture": ExtResource("76_ekknv")
}, {
"duration": 1.0,
"texture": ExtResource("77_6i2nj")
}, {
"duration": 1.0,
"texture": ExtResource("78_rhhck")
}],
"loop": false,
"name": &"slash",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3r8r"]
size = Vector2(23, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ba4m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("75_w18fs")
}, {
"duration": 1.0,
"texture": ExtResource("76_ekknv")
}, {
"duration": 1.0,
"texture": ExtResource("77_6i2nj")
}, {
"duration": 1.0,
"texture": ExtResource("78_rhhck")
}],
"loop": false,
"name": &"slash",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_agpj8"]
size = Vector2(15, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3pffi"]
size = Vector2(14, 39)

[node name="Player_Dreamworld" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_fd23n")

[node name="DashParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_t3ro2")
emitting = false
texture = ExtResource("2_3pffi")
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_bqe6c")

[node name="Health" type="Node" parent="."]
script = ExtResource("3_rxbup")
max_health = 100
metadata/_custom_type_script = "uid://cptwt0tu7lhxh"

[node name="RangeAttackCharges" type="CanvasLayer" parent="."]

[node name="RangeAttackCharges" parent="RangeAttackCharges" instance=ExtResource("4_bydnf")]
offset_left = 131.0
offset_top = 23.0
offset_right = 171.0
offset_bottom = 63.0

[node name="Healthwave" type="CanvasLayer" parent="."]

[node name="HealthWave" parent="Healthwave" instance=ExtResource("5_060o7")]
offset_left = 16.0
offset_top = 19.0
offset_right = 111.0
offset_bottom = 72.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ku5kx")
position = Vector2(-2.0000005, 0)
scale = Vector2(1.1145834, 1.1458334)
sprite_frames = ExtResource("7_nt51a")
animation = &"attack"

[node name="FlashAnimation" type="AnimationPlayer" parent="AnimatedSprite2D"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_ku5kx")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_cdh20")

[node name="HeadCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, -19)

[node name="HitBoxRight" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32
monitoring = false
monitorable = false
script = ExtResource("74_3kc26")
damage = 20
metadata/_custom_type_script = "uid://rb433xiwvdb6"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxRight"]
position = Vector2(18, -1.1920929e-07)
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_v17r1")

[node name="SpriteRightHitbox" type="AnimatedSprite2D" parent="HitBoxRight"]
position = Vector2(12.999999, -0.37499833)
scale = Vector2(0.05664063, 0.103587955)
sprite_frames = SubResource("SpriteFrames_wd1bp")
animation = &"slash"
frame = 3
frame_progress = 1.0

[node name="HitBoxLeft" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32
monitoring = false
monitorable = false
script = ExtResource("74_3kc26")
damage = 20
metadata/_custom_type_script = "uid://rb433xiwvdb6"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxLeft"]
position = Vector2(-17, -1)
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_v17r1")

[node name="SpriteLeftHitbox" type="AnimatedSprite2D" parent="HitBoxLeft"]
position = Vector2(-13.999999, -3.0000002)
rotation = 3.1415927
scale = Vector2(0.057, 0.108)
sprite_frames = SubResource("SpriteFrames_q6oaw")
animation = &"slash"
frame = 3
frame_progress = 1.0
flip_v = true

[node name="HitBoxUp" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32
monitoring = false
monitorable = false
script = ExtResource("74_3kc26")
damage = 20
metadata/_custom_type_script = "uid://rb433xiwvdb6"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxUp"]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_aofeu")

[node name="SpriteUpHitbox" type="AnimatedSprite2D" parent="HitBoxUp"]
position = Vector2(-1.9073486e-06, -26)
rotation = -1.5707964
scale = Vector2(0.03727033, 0.041106243)
sprite_frames = SubResource("SpriteFrames_k4woj")
animation = &"slash"
frame = 3
frame_progress = 1.0

[node name="HitBoxDown" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32
monitoring = false
monitorable = false
script = ExtResource("74_3kc26")
damage = 20
metadata/_custom_type_script = "uid://rb433xiwvdb6"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxDown"]
position = Vector2(-1.5, 22)
shape = SubResource("RectangleShape2D_w3r8r")

[node name="SpriteDownHitbox" type="AnimatedSprite2D" parent="HitBoxDown"]
position = Vector2(-3.3704934, 22)
rotation = 1.5707964
scale = Vector2(0.04560995, 0.05520546)
sprite_frames = SubResource("SpriteFrames_2ba4m")
animation = &"slash"
frame = 3
frame_progress = 1.0

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 4
collision_mask = 8
script = ExtResource("79_84bjp")
health = NodePath("../Health")
metadata/_custom_type_script = "uid://doiua0q38uaxe"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_agpj8")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="HundCoin" parent="." instance=ExtResource("80_ku5kx")]
offset_left = 142.0
offset_top = -116.0
offset_right = 142.0
offset_bottom = -116.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_3pffi")

[node name="AudioPlayer" type="Node2D" parent="."]
script = ExtResource("92_uyd2q")
sound_attack = ExtResource("93_on6mk")
sound_get_hit = ExtResource("94_51uo2")
sound_die = ExtResource("95_01t1s")
sound_range_attack = ExtResource("96_bdibv")
sound_jump = ExtResource("97_igi5t")
sound_dash = ExtResource("98_igi5t")
sound_walk = Array[AudioStream]([ExtResource("98_7f16g"), ExtResource("99_fxyod")])

[node name="AudioMove" type="AudioStreamPlayer2D" parent="AudioPlayer"]
bus = &"SFX"

[node name="AudioAction" type="AudioStreamPlayer2D" parent="AudioPlayer"]
bus = &"SFX"

[connection signal="health_depleted" from="Health" to="." method="_on_health_depleted"]
[connection signal="area_entered" from="HitBoxDown" to="." method="_on_hit_box_down_body_entered"]
[connection signal="body_entered" from="HitBoxDown" to="." method="_on_hit_box_down_body_entered"]
[connection signal="received_damage" from="HurtBox" to="." method="received_damage"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
